# openkara-models

./: .gitignore  .upstream-state.json  AGENTS.md  README.md  latest.json  renovate.json  requirements.txt
.github/: dependabot.yml
catalog/: schema-channel-v1.json  schema-release-v1.json
docs/: catalog-contract.md  dependency-update-authorities.md  runtime-contract.md
ort/: .gitignore  benchmark-report-v1.json  source-lock.json
ort/smoke/: CMakeLists.txt  ort_smoke.cpp  profile_parser.hpp
quality/: baselines.json  budgets.json  corpus-manifest-v1.json  corpus-manifest.json  metric-definitions-v1.json  quality-report-v1.json  runtime-quality-report-v1.json
scripts/: archive_utils.py  build_runtime.py  catalog_model.py  check_dep_automation_health.py  compare_runtime_builds.py  convert_htdemucs_to_onnx.py  demucs_loader.py  detect_model_weight_revision.py  detect_ort_release.py  download_stable_model.py  enforce_quality_gates.py  ensemble_merge.py  generate_catalog_fixtures.py  generate_catalog_release.py  generate_dep_candidate.py  generate_gate_status.py  generate_required_operators.py  generate_runtime_catalog_entries.py  generate_runtime_supply_chain.py  generate_supply_chain.py  generate_trend_report.py  onnx_runtime_contract.py  onnx_stft.py  ort_api_version.py  publish_catalog_release.py  run_native_smoke.py  run_quality_suite.py  run_runtime_benchmarks.py  run_runtime_quality_suite.py  synthetic_fixtures.py  validate_benchmark_report.py  validate_catalog.py  validate_corpus_manifest.py  validate_onnx.py  validate_quality_report.py  validate_runtime_quality_report.py  validate_source_lock.py  verify_runtime_package.py  verify_supply_chain.py
tests/: test_archive_utils.py  test_benchmark_report.py  test_build_runtime.py  test_catalog_generator.py  test_catalog_validation.py  test_compare_runtime_builds.py  test_conversion_pipeline.py  test_corpus_manifest.py  test_dep_candidate.py  test_dep_detection.py  test_dep_health.py  test_gate_status.py  test_native_smoke.py  (+13 more)
(+68 files in other folders)
